Fix issue with not visible iframes

--- a/css/mainstyle.css
+++ b/css/mainstyle.css
@@ -99,13 +99,12 @@ h3.proj-heading {
   margin-bottom: 20px;
 }
 
-div.thumbnail {
-  height: 350px;
+a.thumbnail {
+  margin-top: 10px;
 }
 
-iframe {
-  width: 100%;
-  height: 250px;
+div.thumbnail {
+  height: 350px;
 }
 
 a.page-preview {
